--- a/css/theme.css
+++ b/css/theme.css
@@ -101,6 +101,9 @@ h6 {
   color: #333333;
   margin: 0px;
 }
+h35{
+	color: aliceblue;
+}
 h36{
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: rgba(37,37,37,0.5);
