--- a/css/theme.css
+++ b/css/theme.css
@@ -115,10 +115,10 @@ h37{
   font-size: 18px;
   background-color: rgba(37,37,37,1);
 }
-h38{
+h38{/*Propiedades de Más información*/
   color: black;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 /* The Modal (background) */
